--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body{
     justify-content: center;
     min-height: 120vh;
 }
+@media (min-width: 768px) {
+body{
+    min-height: 100vh;
+}
+}
 
 /**Txt*/
 h1{
